docs(windows): document 1.0.1 detected clients and packaged MCP gates